# dual-stream

./: .gitignore  .gitmodules  CAMERA_PROPERTY_USAGE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TEST_VIDEOS.md  TRACY.md  build.bat  clean.bat  generate_test_videos.bat  generate_test_videos.sh  run_tests.bat  test_results.json
.claude/: settings.local.json
build_test/: CMakeCache.txt
cmake/: DownloadUtils.cmake
config/: default.ini
data/centerface/: README.md
src/: CLAUDE.md  CommandLineParser.cpp  CommandLineParser.h  CudaOpenGLInterop.cpp  CudaOpenGLInterop.h  CudaYuvConversion.cu  D3D11Renderer.cpp  D3D11Renderer.h  FFmpegInitializer.cpp  HardwareDecoder.cpp  HardwareDecoder.h  ImmediateSwitchStrategy.cpp  ImmediateSwitchStrategy.h  KeyframeSwitchStrategy.cpp  KeyframeSwitchStrategy.h  Logger.cpp  Logger.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PredecodedSwitchStrategy.cpp  PredecodedSwitchStrategy.h  VideoDecoder.cpp  VideoDecoder.h  VideoDemuxer.cpp  VideoDemuxer.h  VideoManager.cpp  VideoManager.h  VideoSwitchingStrategy.cpp  VideoSwitchingStrategy.h  VideoValidator.cpp  VideoValidator.h  Window.cpp  main.cpp  pch.cpp  pch.h
src/camera/: CLAUDE.md  CameraFrame.cpp  CameraFrame.h  CameraManager.cpp  CameraManager.h
src/camera/processing/: CLAUDE.md  CameraFramePublisher.cpp  CameraFramePublisher.h  CircularBuffer.h  FaceDetectionSwitchingTrigger.cpp  FaceDetectionSwitchingTrigger.h  ICameraFrameListener.cpp  ICameraFrameListener.h  ListenerProcessor.cpp  ListenerProcessor.h
src/camera/sources/: CLAUDE.md  CameraSourceFactory.cpp  CameraSourceFactory.h  ICameraSource.h  OpenCVCameraSource.cpp  OpenCVCameraSource.h  RealSenseCameraSource.cpp  RealSenseCameraSource.h
src/camera/ui/: CLAUDE.md  CameraControlUI.cpp  CameraControlUI.h  CameraFrameTexture.cpp  CameraFrameTexture.h
src/core/: CLAUDE.md  CommandLineParser.cpp  CommandLineParser.h  Config.cpp  Config.h  FFmpegInitializer.cpp  FFmpegInitializer.h  PerformanceStatistics.cpp  PerformanceStatistics.h  TracyProfiler.cpp  TracyProfiler.h
src/rendering/: CLAUDE.md  CudaOpenGLInterop.cpp  CudaOpenGLInterop.h  CudaYuvConversion.cu  CudaYuvConversion.h  D3D11OverlayRenderPass.cpp  D3D11OverlayRenderPass.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11ToastRenderer.cpp  D3D11ToastRenderer.h  IRenderer.h  IToastRenderer.h  OpenGLHeaders.h  OpenGLOverlayRenderPass.cpp  OpenGLOverlayRenderPass.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLToastRenderer.cpp  OpenGLToastRenderer.h  OverlayRenderPass.cpp  OverlayRenderPass.h  RenderTexture.h  RendererFactory.cpp  RendererFactory.h  TextureConverter.cpp  TextureConverter.h
src/rendering/renderpass/: CLAUDE.md  D3D11RenderPassResources.cpp  D3D11SimpleRenderPass.cpp  D3D11SimpleRenderPass.h  IRenderPass.h  IRenderPassPipeline.h  OverlayRenderPass.cpp  OverlayRenderPass.h  RenderPass.h  RenderPassConfig.cpp  RenderPassConfig.h  RenderPassConfigLoader.cpp  RenderPassConfigLoader.h  RenderPassConfigLoaderOpenGL.cpp  RenderPassContext.h  RenderPassPipeline.cpp  RenderPassPipeline.h  ShaderLibrary.cpp  ShaderLibrary.h
src/rendering/renderpass/d3d11/: CLAUDE.md  D3D11RenderPassResources.h  D3D11SimpleRenderPass.cpp  D3D11SimpleRenderPass.h
src/rendering/renderpass/d3d11/passes/: BloomPass.cpp  CLAUDE.md  D3D11OverlayRenderPass.cpp  D3D11OverlayRenderPass.h  MotionBlurPass.h  SharpenPass.cpp  SharpenPass.h  VignettePass.cpp  VignettePass.h
src/rendering/renderpass/opengl/: CLAUDE.md  OpenGLRenderPass.h  OpenGLRenderPassContext.h  OpenGLRenderPassPipeline.cpp  OpenGLRenderPassPipeline.h  OpenGLRenderPassResources.cpp  OpenGLRenderPassResources.h  OpenGLSimpleRenderPass.cpp  OpenGLSimpleRenderPass.h
src/rendering/renderpass/opengl/passes/: BloomPass.cpp  BloomPass.h  CLAUDE.md  MotionBlurPass.cpp  MotionBlurPass.h  OpenGLOverlayRenderPass.cpp  OpenGLOverlayRenderPass.h  PassthroughPass.cpp  PassthroughPass.h  SharpenPass.cpp  SharpenPass.h  VignettePass.cpp  VignettePass.h  YUVToRGBRenderPass.cpp  YUVToRGBRenderPass.h
src/rendering/renderpass/passes/: BloomPass.cpp  BloomPass.h  PassthroughPass.h  SharpenPass.cpp  SharpenPass.h  VignettePass.cpp  VignettePass.h  YUVToRGBRenderPass.h
src/rendering/renderpass/passes/opengl/: BloomPass.cpp  BloomPass.h  MotionBlurPass.cpp  MotionBlurPass.h  PassthroughPass.cpp  PassthroughPass.h  SharpenPass.h  VignettePass.h  YUVToRGBRenderPass.h
src/ui/: CLAUDE.md  GlobalInputHandler.cpp  GlobalInputHandler.h  IUIDrawable.h  ImGuiManager.cpp  ImGuiManager.h  NotificationManager.cpp  NotificationManager.h  OverlayManager.cpp  OverlayManager.h  ToastManager.cpp  ToastManager.h  UIRegistry.cpp  UIRegistry.h  Window.cpp  Window.h
src/video/: CLAUDE.md  VideoManager.cpp  VideoManager.h  VideoValidator.cpp  VideoValidator.h
src/video/decode/: CLAUDE.md  HardwareDecoder.cpp  VideoDecoder.cpp  VideoDecoder.h
src/video/demux/: CLAUDE.md  VideoDemuxer.cpp
src/video/switching/: CLAUDE.md  KeyframeSwitchStrategy.cpp  KeyframeSwitchStrategy.h  SingleVideoStrategy.cpp  SingleVideoStrategy.h  VideoSwitchingStrategy.cpp  VideoSwitchingStrategy.h
src/video/switching/experimental/: CLAUDE.md  ImmediateSwitchStrategy.cpp  ImmediateSwitchStrategy.h  PredecodedSwitchStrategy.cpp  PredecodedSwitchStrategy.h
src/video/triggers/: CLAUDE.md  ISwitchingTrigger.h  KeyboardSwitchingTrigger.cpp  KeyboardSwitchingTrigger.h  NoOpSwitchingTrigger.cpp  NoOpSwitchingTrigger.h  SwitchingTriggerFactory.cpp  SwitchingTriggerFactory.h
tests/: CMakeLists.txt  FrameValidator.cpp  FrameValidator.h  LocalTestConfig.cpp  LocalTestConfig.h  PerformanceBenchmark.cpp  PerformanceBenchmark.h  README.md  SwitchingValidator.cpp  SwitchingValidator.h  TODO.md  TestRunner.cpp  TestRunner.h  json_config_test.cpp  json_test.cpp  simple_test.cpp  test_config.json  test_config.local.json.template  test_runner_main.cpp
tools/: tracy_instrumentor.py
